added navbar and sections. still need to flush out everything.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,180 @@
     <title>typeerror_</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arbutus+Slab">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/Animated-Text-Background.css">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
+    <link rel="stylesheet" href="assets/css/Lorem1.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body>
-    <div class="d-flex justify-content-center align-items-center" id="animatedTextBackground" style="background: rgb(85,71,71);">
-        <h1 id="animatedTextHeading"><br>type-<br>error<br><br></h1>
+<body style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);">
+    <nav class="navbar navbar-light navbar-expand-md fixed-top text-monospace" data-aos="flip-up" data-aos-duration="400" data-aos-once="true" id="navbar" style="width: 100vw;font-family: Lato, sans-serif;min-width: 600px;">
+        <div class="container-fluid"><a class="navbar-brand d-flex flex-grow-1 flex-fill" id="logo" href="#" style="color: rgb(112,206,155);font-size: 2.3vh;padding-left: 20vw;">{<span style="color: rgb(255,255,255);padding: 4px;padding-top: 0;padding-bottom: 0;">kevintong_</span>}</a>
+            <button
+                data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navcol-1" style="width: -5vw;"></div>
+                <ul class="nav navbar-nav d-flex d-sm-none d-md-none d-lg-flex" style="padding-right: 20vw;">
+                    <li class="nav-item"><a class="nav-link link-text" id="nav-info" href="#" style="font-weight: bold;">Info</a></li>
+                    <li class="nav-item"><a class="nav-link link-text" id="nav-work" href="#" style="font-weight: bold;">Work</a></li>
+                    <li class="nav-item"><a class="nav-link link-text" id="nav-portfolio" href="#" style="font-weight: bold;">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link link-text" id="nav-skills" href="#" style="font-weight: bold;">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link link-text" id="nav-moto" href="#" style="font-weight: bold;">Moto</a></li>
+                </ul>
+        </div>
+    </nav>
+    <header style="width: 100%;height: 100vh;">
+        <div class="justify-content-center align-items-center" data-bs-parallax-bg="true" id="animatedTextBackground">
+            <h1 id="animatedTextHeading">type-<br>error</h1>
+        </div>
+    </header>
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" id="info" style="color: rgb(24,24,24);background: #a0b3ad;height: 100vh;">
+        <section style="padding-top: 63px;">
+            <div class="container" style="padding-top: 36px;">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Name</h3>
+                        <ul>
+                            <li>Kevin Tong</li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="#">Graphic Artist</a></li>
+                            <li><a href="#"></a></li>
+                            <li><a href="#">Full Stack Engineer</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3>Biography</h3>
+                        <p>Kevin Tong is a Bay Area, California-based creative sharing interests equally among traditional art, graphic/UX design, front- and back-end software architecture, utilizing a background in traditional art and full stack software
+                            engineering.</p>
+                    </div>
+                    <div class="col item social"></div>
+                    <div class="col d-xl-flex justify-content-xl-center align-items-xl-center item social"><a href="https://www.linkedin.com/in/kevin-tong-84b20761/" style="color: rgb(0,0,0);"><i class="icon ion-social-linkedin"></i></a><a href="https://github.com/krtong"><i class="icon ion-social-github" style="color: rgb(0,0,0);"></i></a>
+                        <a
+                            href="https://codepen.io/krtong"><i class="fab fa-codepen" style="color: rgb(0,0,0);margin-top: 9px;"></i></a><a href="http://discordapp.com/users/krtong#9471" style="color: rgb(0,0,0);"><i class="fab fa-discord" style="padding-top: 10px;"></i></a></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="text-monospace d-flex justify-content-xl-center align-items-xl-center footer-dark" data-aos="fade" data-aos-duration="850" data-aos-once="true" id="work" style="background: rgb(218,210,193);">
+        <section class="d-xl-flex align-items-xl-center" style="height: 100vh;">
+            <div class="container">
+                <div class="row d-xl-flex align-items-xl-start" style="padding-top: 83px;padding-bottom: 76px;">
+                    <div class="col col-md-3">
+                        <h3>Work</h3>
+                        <p>Tong McKnew Associates<br>Academy Art University<br>Geremia Design<br>Ride Apart<br>Gnomon<br>Hack Reactor<br>UC Berkeley / Trilogy</p>
+                    </div>
+                    <div class="col col-md-1">
+                        <h3>Year</h3>
+                        <p>02<br>04-08<br>09-11<br>11-13<br>15<br>18-19<br>19-20</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>Description</h3>
+                        <p>Graphic Design / Package Design [Intern]<br>Graphic Design / Industrial Design [Student]<br>Graphic Design / Web Design / Project Management<br>Motorcycle Photo Journalism<br>3D Modeling / Illustration<br>Full Stack Coding Bootcamp<br>Full
+                            Stack Coding Bootcamp</p>
+                    </div>
+                    <div class="col col-md-3">
+                        <h3>WIP</h3>
+                        <p></p>
+                        <p>This section is a work in progress. This is merely to outline what information needs to still be visually represented.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="text-monospace d-flex justify-content-xl-center footer-dark section-info" data-aos="fade" data-aos-duration="850" data-aos-offset="700px" data-aos-delay="50" data-aos-once="true" id="portfolio" style="color: rgb(24,24,24);background: linear-gradient(#212b6b, rgb(12,23,36) 100%), #604527;min-height: 100vh;">
+        <section class="d-xl-flex align-items-xl-center">
+            <div class="container d-xl-flex align-items-xl-center" style="padding-top: 91px;">
+                <div class="row">
+                    <div class="col col-md-2">
+                        <h3>Portfolio</h3>
+                        <p>Grocery List<br>2020</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>Description</h3>
+                        <p>A CRUD MERN stack web app that pulls data from a Spoontacular API, create a profile using OAuth2, search for recipes, exports and compile ingredients lists to a grocery cart, and purchase from amazon fresh or InstaCart, save and
+                            retrieve profile and shopping data to a Mongo database.<br><br></p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>Thumbnail</h3><img class="image-md-4" src="assets/img/EPOCH_FILM_STILLS_web_2560_017.jpg">
+                        <p></p>
+                    </div>
+                    <div class="col col-md-2">
+                        <h3>-</h3>
+                        <p>Goblin Browser RPG<br>2020</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>-</h3>
+                        <p>A vanilla javaScript turn based RPG.&nbsp; Each action of the player sent an API call to a server with the current state of the player and returned back the results of that action and what the player's options are. It was a challenge
+                            to handle state without something like React. An RPG is a great way to make state as complicated as possible, and come up with a design pattern that allowed the game to continue to grow.</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>-</h3><img class="image-md-4" src="assets/img/EPOCH_II_FILM_STILLS_ALT_C_013.jpg"></div>
+                    <div class="col col-md-2">
+                        <h3>-</h3>
+                        <p>mapChat<br>2019</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>-</h3>
+                        <p>mapChat utilized Google Firebase to create users and allow them to pin messages on a map and share them. Users could then see and share messages from users nearby and take advantage of various overlays to see the coorelation between
+                            time, weather, temperature, and user activity. To make the app performant, messages were stored on a noSQL FireStore database using geohashes to turn what would've been a very complicated lat-long lookup into a 1D range of
+                            results.&nbsp;</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>-</h3><img class="image-md-4" src="assets/img/EPOCH_II_FILM_STILLS_ALT_C_018.jpg"></div>
+                    <div class="col col-md-2">
+                        <h3>-</h3>
+                        <p>Google Book List<br>2019</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>-</h3>
+                        <p>React-based CRUD&nbsp;app using the Google Books Api. Users can search for books, view results by book covers and details, and save books to a list. Data is made persistent using a mySQL database.&nbsp;<br><br></p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>-</h3><img class="image-md-4" src="assets/img/EPOCH_FILM_STILLS_web_2560_018-1.jpg"></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" id="skills" style="background: rgb(60,84,89);min-height: 100vh;">
+        <section style="padding: 53px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-md-3">
+                        <h3>Skills</h3>
+                        <p>javaScript<br>frontEnd<br>graphicDesign<br>backEnd<br>timeManagement<br>agileWorkflow<br>dataStructures<br>algorithms<br>softwareArchitecture</p>
+                    </div>
+                    <div class="col col-md-1">
+                        <h3>Years</h3>
+                        <p>3<br>3<br>5<br>2<br>10<br>2<br>2<br>2<br>1</p>
+                    </div>
+                    <div class="col col-md-5">
+                        <h3>Description</h3>
+                        <p>ES6+, countless libraries<br>React, API calls, Express js,&nbsp;<br>Print, Web,<br>servers, databases, SDK, routing, architecting<br><br>design, develop, test, deploy<br><br>sorting, time complexity<br><br></p>
+                    </div>
+                    <div class="col col-md-3">
+                        <h3>WIP</h3>
+                        <p></p>
+                        <p>This section is a work in progress. This is merely to outline what information needs to still be visually represented.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
     <script src="assets/js/Animated-Text-Background.js"></script>
+    <script src="assets/js/navbar.js"></script>
 </body>
 
 </html>
