added navbar and sections. still need to flush out everything.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 id="animatedTextHeading">type-<br>error</h1>
         </div>
     </header>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" id="info" style="color: rgb(24,24,24);background: #a0b3ad;height: 100vh;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" id="info" style="color: rgb(24,24,24);background: linear-gradient(rgb(169,195,190) 0%, rgb(160,179,173) 51%, rgb(110,153,162)), #a0b3ad;height: 100vh;">
         <section style="padding-top: 63px;">
             <div class="container" style="padding-top: 36px;">
                 <div class="row">
