--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);">
     <nav class="navbar navbar-light navbar-expand-md fixed-top text-monospace" id="navbar">
         <div class="container-fluid">
-            <div></div><a class="navbar-brand" id="logo" href="#home" style="color: rgb(112,206,155);font-size: 24px;">{<span style="color: rgb(255,255,255);padding: 4px;padding-top: 0;padding-bottom: 0;">kevintong_</span>}</a>
+            <div></div><a class="navbar-brand" id="logo" href="#home" style="color: rgb(112,206,155);font-size: 2.4vh;">{<span style="color: rgb(255,255,255);padding: 4px;padding-top: 0;padding-bottom: 0;">kevintong_</span>}</a>
             <ul class="nav navbar-nav d-none d-lg-inline-flex">
                 <li class="nav-item"><a class="nav-link link-text js-scroll-trigger" id="nav-info" href="#info">Info</a></li>
                 <li class="nav-item"><a class="nav-link link-text" id="nav-work" href="#work" style="font-weight: bold;">Work</a></li>
@@ -75,7 +75,7 @@
         <section class="d-xl-flex align-items-xl-center" style="height: 100vh;">
             <div class="container">
                 <div class="row d-xl-flex align-items-xl-start" style="padding-top: 83px;padding-bottom: 76px;">
-                    <div class="col col-md-3">
+                    <div class="col col-md-3 col-sm-12">
                         <h3>Work</h3>
                         <p>Tong McKnew Associates<br>Academy Art University<br>Geremia Design<br>Ride Apart<br>Gnomon<br>Hack Reactor<br>UC Berkeley / Trilogy</p>
                     </div>
