working on some responsiveness. the other categories need work but im going to redo those anyway.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
 <body style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);">
     <nav class="navbar navbar-light navbar-expand-md fixed-top text-monospace" id="navbar">
         <div class="container-fluid">
-            <div></div><a class="navbar-brand" id="logo" href="#home" style="color: rgb(112,206,155);font-size: 2.4vh;">{<span style="color: rgb(255,255,255);padding: 4px;padding-top: 0;padding-bottom: 0;">kevintong_</span>}</a>
-            <ul class="nav navbar-nav d-none d-lg-inline-flex">
+            <div></div><a class="navbar-brand d-lg-flex justify-content-lg-center" id="logo" href="#home" style="color: rgb(112,206,155);font-size: 2.4vh;">{<span style="color: rgb(255,255,255);padding: 4px;padding-top: 0;padding-bottom: 0;">kevintong_</span>}</a>
+            <ul
+                class="nav navbar-nav d-none d-lg-inline-flex">
                 <li class="nav-item"><a class="nav-link link-text js-scroll-trigger" id="nav-info" href="#info">Info</a></li>
                 <li class="nav-item"><a class="nav-link link-text" id="nav-work" href="#work" style="font-weight: bold;">Work</a></li>
                 <li class="nav-item"><a class="nav-link link-text" id="nav-portfolio" href="#portfolio" style="font-weight: bold;">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link link-text" id="nav-skills" href="#skills" style="font-weight: bold;">Skills</a></li>
                 <li class="nav-item"><a class="nav-link link-text" id="nav-moto" href="#moto" style="font-weight: bold;">Moto</a></li>
-            </ul>
-            <div></div>
+                </ul>
+                <div></div>
         </div>
     </nav>
     <header id="home" class="container no-gutters" style="width: 100vw;height: 100vh;">
