--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     <link rel="stylesheet" href="assets/css/Animated-Text-Background.css">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
-    <link rel="stylesheet" href="assets/css/Lorem1.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);">
+<body style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);margin: 0px;padding: 0px;">
     <nav class="navbar navbar-light navbar-expand-md fixed-top text-monospace" id="navbar">
         <div class="container-fluid">
             <div></div><a class="navbar-brand d-lg-flex justify-content-lg-center" id="logo" href="#home" style="color: rgb(112,206,155);font-size: 2.4vh;">{<span style="color: rgb(255,255,255);padding: 4px;padding-top: 0;padding-bottom: 0;">kevintong_</span>}</a>
@@ -32,14 +31,14 @@
                 <div></div>
         </div>
     </nav>
-    <header id="home" class="container no-gutters" style="width: 100vw;height: 100vh;">
-        <div class="row no-gutters justify-content-center align-items-center" id="animatedTextBackground">
-            <div class="col col-sm-12 col-md-10 col-lg-8">
-                <h1 id="animatedTextHeading" style="color: rgb(0,0,0);background: #000000;">type-<br>error</h1>
+    <header id="home" class="container no-gutters" style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);width: 100vw;/*overflow: visible !important;*/padding: 0px;padding-top: 8.5%;height: 100vh;min-width: 100%;">
+        <div class="row no-gutters text-left d-flex flex-row justify-content-center align-items-center" style="width: 100%;height: 50%;">
+            <div class="col d-flex justify-content-center align-items-center align-self-end" id="animatedTextBackground">
+                <h1 class="align-self-center" id="animatedTextHeading">type-<br>error</h1>
             </div>
         </div>
     </header>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="info" style="color: rgb(24,24,24);background: linear-gradient(rgb(169,195,190) 0%, rgb(160,179,173) 51%, rgb(110,153,162)), #a0b3ad;height: 100vh;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" id="info" style="color: rgb(24,24,24);background: linear-gradient(rgb(169,195,190) 0%, rgb(160,179,173) 51%, rgb(110,153,162)), #a0b3ad;min-height: 100vmin;">
         <section style="padding-top: 63px;">
             <div class="container" style="padding-top: 36px;">
                 <div class="row">
@@ -72,7 +71,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-flex justify-content-xl-center align-items-xl-center footer-dark" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="work" style="background: rgb(218,210,193);">
+    <div class="text-monospace d-flex justify-content-xl-center align-items-xl-center footer-dark" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="work" style="background: rgb(218,210,193);min-height: 100vmin;">
         <section class="d-xl-flex align-items-xl-center" style="height: 100vh;">
             <div class="container">
                 <div class="row d-xl-flex align-items-xl-start" style="padding-top: 83px;padding-bottom: 76px;">
@@ -82,7 +81,7 @@
                     </div>
                     <div class="col col-md-1">
                         <h3>Year</h3>
-                        <p>02<br>04-08<br>09-11<br>11-13<br>15<br>18-19<br>19-20</p>
+                        <p style="color: rgb(174,166,95);">02<br>04-08<br>09-11<br>11-13<br>15<br>18-19<br>19-20</p>
                     </div>
                     <div class="col col-md-5">
                         <h3>Description</h3>
@@ -98,7 +97,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-flex justify-content-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="portfolio" style="color: rgb(24,24,24);background: linear-gradient(#212b6b, rgb(12,23,36) 100%), #604527;min-height: 100vh;">
+    <div class="text-monospace d-flex justify-content-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="portfolio" style="color: rgb(24,24,24);background: linear-gradient(#212b6b, rgb(12,23,36) 100%), #604527;min-height: 100vmin;">
         <section class="d-xl-flex align-items-xl-center">
             <div class="container d-xl-flex align-items-xl-center" style="padding-top: 91px;">
                 <div class="row">
@@ -152,17 +151,17 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="skills" style="background: rgb(60,84,89);min-height: 100vh;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="skills" style="background: rgb(60,84,89);min-height: 100vmin;">
         <section style="padding: 53px;">
             <div class="container">
-                <div class="row">
+                <div class="row" style="text-shadow: 0px 0px;">
                     <div class="col col-md-3">
                         <h3>Skills</h3>
                         <p>javaScript<br>frontEnd<br>graphicDesign<br>backEnd<br>timeManagement<br>agileWorkflow<br>dataStructures<br>algorithms<br>softwareArchitecture</p>
                     </div>
                     <div class="col col-md-1">
                         <h3>Years</h3>
-                        <p>3<br>3<br>5<br>2<br>10<br>2<br>2<br>2<br>1</p>
+                        <p style="color: rgb(215,144,74);">3<br>3<br>5<br>2<br>10<br>2<br>2<br>2<br>1</p>
                     </div>
                     <div class="col col-md-5">
                         <h3>Description</h3>
@@ -177,7 +176,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="moto" style="background: radial-gradient(rgb(36,90,64) 13%, rgb(39,75,57) 66%, rgb(42,59,50) 90%, rgb(46,42,42) 100%), rgb(60,84,89);min-height: 100vh;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="moto" style="background: radial-gradient(rgb(36,90,64) 13%, rgb(39,75,57) 66%, rgb(42,59,50) 90%, rgb(46,42,42) 100%), rgb(60,84,89);min-height: 100vmin;">
         <section style="padding: 53px;">
             <div class="container">
                 <div class="row">
