--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/Animated-Text-Background.css">
-    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/temporary-styles.css">
 </head>
 
 <body style="background: radial-gradient(rgb(85,71,71) 41%, rgb(68,51,69) 100%), rgb(85,71,71);margin: 0px;padding: 0px;">
@@ -38,7 +37,7 @@
             </div>
         </div>
     </header>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" id="info" style="color: rgb(24,24,24);background: linear-gradient(rgb(169,195,190) 0%, rgb(160,179,173) 51%, rgb(110,153,162)), #a0b3ad;min-height: 100vmin;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center temp-col-block section-info" id="info" style="color: rgb(24,24,24);background: linear-gradient(rgb(169,195,190) 0%, rgb(160,179,173) 51%, rgb(110,153,162)), #a0b3ad;min-height: 100vmin;">
         <section style="padding-top: 63px;">
             <div class="container" style="padding-top: 36px;">
                 <div class="row">
@@ -71,7 +70,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-flex justify-content-xl-center align-items-xl-center footer-dark" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="work" style="background: rgb(218,210,193);min-height: 100vmin;">
+    <div class="text-monospace d-flex justify-content-xl-center align-items-xl-center temp-col-block" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="work" style="min-height: 100vmin;background: rgb(218,210,193);">
         <section class="d-xl-flex align-items-xl-center" style="height: 100vh;">
             <div class="container">
                 <div class="row d-xl-flex align-items-xl-start" style="padding-top: 83px;padding-bottom: 76px;">
@@ -97,7 +96,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-flex justify-content-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="portfolio" style="color: rgb(24,24,24);background: linear-gradient(#212b6b, rgb(12,23,36) 100%), #604527;min-height: 100vmin;">
+    <div class="text-monospace d-flex justify-content-xl-center temp-col-block section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="portfolio" style="color: rgb(24,24,24);background: linear-gradient(#212b6b, rgb(12,23,36) 100%), #604527;min-height: 100vmin;">
         <section class="d-xl-flex align-items-xl-center">
             <div class="container d-xl-flex align-items-xl-center" style="padding-top: 91px;">
                 <div class="row">
@@ -151,7 +150,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="skills" style="background: rgb(60,84,89);min-height: 100vmin;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center temp-col-block section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="skills" style="background: rgb(60,84,89);min-height: 100vmin;">
         <section style="padding: 53px;">
             <div class="container">
                 <div class="row" style="text-shadow: 0px 0px;">
@@ -176,7 +175,7 @@
             </div>
         </section>
     </div>
-    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center footer-dark section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="moto" style="background: radial-gradient(rgb(36,90,64) 13%, rgb(39,75,57) 66%, rgb(42,59,50) 90%, rgb(46,42,42) 100%), rgb(60,84,89);min-height: 100vmin;">
+    <div class="text-monospace d-xl-flex justify-content-xl-center align-items-xl-center temp-col-block section-info" data-aos="fade" data-aos-delay="50" data-aos-once="true" id="moto" style="background: radial-gradient(rgb(36,90,64) 13%, rgb(39,75,57) 66%, rgb(42,59,50) 90%, rgb(46,42,42) 100%), rgb(60,84,89);min-height: 100vmin;">
         <section style="padding: 53px;">
             <div class="container">
                 <div class="row">
@@ -192,7 +191,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
-    <script src="assets/js/Animated-Text-Background.js"></script>
+    <script src="assets/js/home.js"></script>
     <script src="assets/js/navbar.js"></script>
 </body>
 
